# school-service-api

./: .gitignore  Cargo.toml  README.md  database.sql
src/: errors.rs  main.rs  routes.rs  state.rs
src/db_access/: course_db.rs  mod.rs
src/handlers/: course_handler.rs  mod.rs
src/models/: course.rs
