[package]
name = "school-service-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
config = "0.13"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
lazy_static = "1.4"
serde_json = "1.0"
env_logger = "0.11.3"
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4"] }
futures = "0.3.30"
[dependencies.reqwest]
version = "0.12.5"
features = ["json"]
